Make it impossible to change the type of the standard entries, make the behavior of delete more consistant.

BUG: 119367
BUG: 119369

svn path=/branches/KDE/3.5/kdelibs/; revision=501392